[package]
name = "speed-test"
version = "0.1.0"
authors = ["omegga <whymagnet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0"
reqwest = { version = "0.10", features = ["blocking"] }
serde_json = "1.0"
tar = "0.4"
